refactor: simplify DataService, improve email tone, apply formatting